<resources>
    <string name="app_name">Adulis</string>
    <string name="title_activity_verify_sign_up_txt">verifySignUpTxt</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shop">Shop</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Clothing</string>
    <string name="tab_text_3">Shoes</string>
    <string name="tab_text_4">Fasion</string>
    <string name="tab_text_5">Beauty</string>
    <string name="tab_text_6">Personal care</string>
    <string name="tab_text_7">Electronics</string>
    <string name="tab_text_8">Household</string>
    <string name="tab_text_9">Kitchen</string>
    <string name="tab_text_10">Industrial</string>
    <string name="tab_text_11">Tools</string>
    <string name="tab_text_12">Automtive</string>
    <string name="tab_text_13">Other</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_shopping_cart">ShoppingCart</string>
    <string name="title_activity_orders">Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing">Ad</string>
    <string name="shop">Shop</string>
    <string name="title_activity_single_product">SingleProduct</string>
    <string name="bt_add_cart">Add to cart</string>
    <string name="categories_product">Catagories</string>
    <string name="dummy">some leorem ipsumdonor ement some leorem ipsumdonor ement some leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ement some leorem ipsumdonor ementsome leorem ipsumdonor
        /n ementsome leorem ipsumdonor ementsome leorem ipsumdonor ement some leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem
        ipsumdonor ement some leorem ipsumdonor ement some leoremipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ement some leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ementsome leorem ipsumdonor ement some leorem ipsumdonor ementsome
        leorem ipsumdonor ementsome leorem ipsumdonor ement</string>


    <!--login strings-->
    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="signup_txt">Sign-up</string>
    <string name="join_adnulis">Become a member now</string>
    <string name="already_has_account">Already has an account? Login.</string>
    <string name="signup">Sign-up</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="password2">Confirm password</string>
    <string name="didnothavanaccount">Don\'t have an account? Sign up.</string>
    <string name="title_activity_checkout">Checkout</string>
</resources>
