<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:layout_width="match_parent"

    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:rotation="90"
        android:src="@drawable/ic_back" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

   >

    <LinearLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
       android:layout_marginTop="20dp"
        android:orientation="vertical"
      >


        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_txt"
            android:textColor="@color/colorBackground"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txt"
            android:layout_marginTop="10dp"
            android:text="@string/join_adnulis"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginButton"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firstname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPersonName"
                android:textSize="15sp" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPersonName"
                android:textSize="15sp" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/phone"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:inputType="phone"
                android:textSize="15sp" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />



        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/already_has_acount"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_drawable"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/already_has_acount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/already_has_account"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>
</LinearLayout>